add resume, changed aboutme and contact html

--- a/cover/Contact.html
+++ b/cover/Contact.html
@@ -47,12 +47,14 @@
   </header>
 
   <main role="main" class="inner cover">
-    <img src="..\assets\Pictures\Sean.jpg" alt="Avatar">
-    <h1 class="cover-heading">Software Developer.</h1>
-    <p class="lead">My name is Sean Keckler, I have a love for technology .</p>
-    <p class="lead">
-      <a href="AboutMe.html" class="btn btn-lg btn-secondary">Put something here</a>
-    </p>
+
+    <h1 class="cover-heading">Contact Me</h1>
+    <h4>
+      <a href="https://github.com/Seankeckler">Github</a>
+      <a href="https://twitter.com/SeanKeckler">Twitter</a>
+      <a href = "mailto: Seankeckler@gmail.com">Email</a>
+      <a href="D:\Repos\Project0\assets\Sean_Keckler_Resume.pdf" download>Resume</a>
+    </h4>
   </main>
 
   <footer class="mastfoot mt-auto">
