--- a/cover/AboutMe.html
+++ b/cover/AboutMe.html
@@ -47,12 +47,28 @@
   </header>
 
   <main role="main" class="inner cover">
-    <img src="..\assets\Pictures\Sean.jpg" alt="Avatar">
-    <h1 class="cover-heading">Software Developer.</h1>
-    <p class="lead">My name is Sean Keckler, I have a love for technology .</p>
-    <p class="lead">
-      <a href="AboutMe.html" class="btn btn-lg btn-secondary">Put something here</a>
-    </p>
+    <p class="lead">I started my love for languages in a different area,
+      studying Sign Language at GRCC, because I was working at a company called Alternative Pathways.
+      Taking care of adults with mental and physical disabilities,
+      I started learning because my main client happened to be deaf.
+      <br>
+I fell away from that role when my family began to grow.
+So I went back to college to learn auto mechanics.
+I started a job at Borgman ford while I was still learning,
+I was hired as a Quick lane technician,
+I started showcasing my knowledge by asking to take on jobs that required more knowledge and understanding.
+While performing these jobs I was asked to transition over to the used car department.
+When I was at a loss, I would turn to the internet, as most people do. I would find myself,
+more often than not, finding the answers quickly but without the actual physical knowledge of how to
+perform the tasks, still taking longer than I would have liked on the jobs.
+<br>
+Realizing that maybe automotive wasn’t for me,
+I went back to school again. I went to a bootcamp for C# and found that I was in love with it.
+I learned quickly and gained rapport with the other students.
+I was enjoying myself everyday, even if the problems that I was solving were small,
+but frustrating. Come Final Project time,
+I remember Sweating profusely on a stage in front of about 100 or so people that had come just to see the project that my team and I were working on.
+</p>
   </main>
 
   <footer class="mastfoot mt-auto">
