Update AboutMe.html, Hobbies.html, and Index.html

--- a/cover/Hobbies.html
+++ b/cover/Hobbies.html
@@ -47,12 +47,11 @@
   </header>
 
   <main role="main" class="inner cover">
-    <img src="..\assets\Pictures\Sean.jpg" alt="Avatar">
-    <h1 class="cover-heading">Software Developer.</h1>
-    <p class="lead">My name is Sean Keckler, I have a love for technology .</p>
-    <p class="lead">
-      <a href="AboutMe.html" class="btn btn-lg btn-secondary">Put something here</a>
-    </p>
+    <p class="lead"><a target="_blank" href="https://www.youtube.com/watch?v=3CGMWlXosp4&list=PL2FF995289A6FC7CD">Martial Arts</a></p>
+    <p class="lead"><a href="..\assets\Pictures\BikesDowntown.jpg">Motorcycles</a></p>
+  <p class="lead"><a target="_blank" href="https://store.steampowered.com/">Video Games</a></p>
+  <p class="lead"><a target="_blank" href="https://Dndbeyond.com">Dungeons & Dragons</a></p>
+
   </main>
 
   <footer class="mastfoot mt-auto">
