--- a/cover/index.html
+++ b/cover/index.html
@@ -49,9 +49,9 @@
   <main role="main" class="inner cover">
     <img src="..\assets\Pictures\Sean.jpg" alt="Avatar">
     <h1 class="cover-heading">Software Developer.</h1>
-    <p class="lead">My name is Sean Keckler, I have a love for technology .</p>
+    <p class="lead" >For the love of people & technology .</p>
     <p class="lead">
-      <a href="AboutMe.html" class="btn btn-lg btn-secondary">Put something here</a>
+      <a href="AboutMe.html" class="btn btn-lg btn-secondary">My Background</a>
     </p>
   </main>
 
