--- a/cover/AboutMe.html
+++ b/cover/AboutMe.html
@@ -48,26 +48,47 @@
 
   <main role="main" class="inner cover">
     <p class="lead">I started my love for languages in a different area,
-      studying Sign Language at GRCC, because I was working at a company called Alternative Pathways.
+      studying Sign Language at GRCC, I was working at a company called Alternative Pathways.
       Taking care of adults with mental and physical disabilities,
       I started learning because my main client happened to be deaf.
+      <br>
       <br>
 I fell away from that role when my family began to grow.
 So I went back to college to learn auto mechanics.
 I started a job at Borgman ford while I was still learning,
 I was hired as a Quick lane technician,
-I started showcasing my knowledge by asking to take on jobs that required more knowledge and understanding.
+I started showcasing my skills by asking to take on jobs that required more knowledge and understanding.
 While performing these jobs I was asked to transition over to the used car department.
 When I was at a loss, I would turn to the internet, as most people do. I would find myself,
 more often than not, finding the answers quickly but without the actual physical knowledge of how to
 perform the tasks, still taking longer than I would have liked on the jobs.
 <br>
+<br>
 Realizing that maybe automotive wasn’t for me,
 I went back to school again. I went to a bootcamp for C# and found that I was in love with it.
 I learned quickly and gained rapport with the other students.
-I was enjoying myself everyday, even if the problems that I was solving were small,
-but frustrating. Come Final Project time,
-I remember Sweating profusely on a stage in front of about 100 or so people that had come just to see the project that my team and I were working on.
+I was enjoying myself everyday, even if the problems that I was solving were small. Come Final Project time,
+I remember Sweating profusely on a stage in front of about 100 or
+so people that had come just to see the project that my team and I were working on.
+<br>
+<br>
+During my hunt for development work I found someone who made their own language(lavishscript), and began an
+apprenticeship with him. Learning a new language proved difficult, but again, fun and rewarding.
+We began building little instruments for his project ISboxer.
+<br>
+<br>
+During the Lavishscript phase I also took part in a local development conference here (Grand Rapids), called
+BeerCityCode. I have been apart of the development conference for a couple years, but I mostly just did
+mundane, physical assistance, like placing and picking up chairs, cleaning up some of the clutter
+out of Calvin College, and some minor tech support when the technology wasn't working. Learning that
+founder of the program decided to step back out of the role, new roles opened up and became available.
+I quickly got on board and asked to maintain the website, <a target="_blank" href="https://beercitycode.com">beercitycode</a>,
+updating the information and re-working some of the old and putting in some new.
+<br>
+<br>
+From there I went to Spectrum health and found that they made most of their jobs are available to
+internal applicants only. So I put in an application for their Help Desk, got the job, and that is where I
+sit today. Still striving to learn more, to do more, and to smile the whole way.
 </p>
   </main>
 
